--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,20 @@
 /* write your override styles here */
+.tag-1 {
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display: block;
+  }
+
+  #wall .tag-1 {
+    display: none;
+  }
+
+  .parent-2 {
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display: block;
+  }
+
+  #wall .tag-4 {
+    display: none;
+  }
